# data-comparer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
backend/: Cargo.toml  test_data.csv  test_data.xlsx
backend/src/: comparison.rs  handlers.rs  main.rs  test_comparison.rs  test_csv.rs  test_excel.rs
backend/src/parsers/: csv_parser.rs  excel_parser.rs  mod.rs
frontend/: Cargo.toml  fly.toml  index.html  styles.css
frontend/src/: main.rs
frontend/src/components/: editable_grid.rs  file_upload.rs  filterable_table.rs  matched_table.rs  mod.rs  results_display.rs  unmatched_table.rs
shared/: Cargo.toml
shared/src/: lib.rs
