[package]
name = "data-comparer-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.44", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
