[package]
name = "data-comparer-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8", features = ["csr"] }

#shared types
data-comparer-shared = { path = "../shared" }

# Web APIs
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["File", "FileList", "FileReader", "Event"] }
gloo-net = { version = "0.6", features = ["http"] }

